--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <img src="pequena2.jpg" alt="Personagem de Jujutsu Kaisen" class="imagem-pequena">
             </div>
             <div class="imagem-container">
-                <img src="pequena3.jpg" alt="ka3.jpg" class="imagem-pequena">
+                <img src="ka3.jpg" alt="Personagem de Jujutsu Kaisen" class="imagem-pequena">
             </div>
         </section>
 
