--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <main>
         <section class="imagens-pequenas">
             <div class="imagem-container">
-                <img src="pequena1.jpg" alt="Personagem de Jujutsu Kaisen" class="imagem-pequena">
+                <img src="ka1.jpg" alt="Personagem de Jujutsu Kaisen" class="imagem-pequena">
             </div>
             <div class="imagem-container">
-                <img src="pequena2.jpg" alt="Personagem de Jujutsu Kaisen" class="imagem-pequena">
+                <img src="ka2.jpg" alt="Personagem de Jujutsu Kaisen" class="imagem-pequena">
             </div>
             <div class="imagem-container">
                 <img src="ka3.jpg" alt="Personagem de Jujutsu Kaisen" class="imagem-pequena">
@@ -27,13 +27,13 @@
 
         <section class="imagens-grandes">
             <div class="imagem-container">
-                <img src="grande1.jpg" alt="Cena de Jujutsu Kaisen" class="imagem-grande">
+                <img src="ka4.jpg" alt="Cena de Jujutsu Kaisen" class="imagem-grande">
             </div>
             <div class="imagem-container">
-                <img src="grande2.jpg" alt="Cena de Jujutsu Kaisen" class="imagem-grande">
+                <img src="ka5.jpg" alt="Cena de Jujutsu Kaisen" class="imagem-grande">
             </div>
             <div class="imagem-container">
-                <img src="grande3.jpg" alt="Cena de Jujutsu Kaisen" class="imagem-grande">
+                <img src="ka6.jpg" alt="Cena de Jujutsu Kaisen" class="imagem-grande">
             </div>
         </section>
     </main>
